[tool.poetry]
name = "oll"
version = "0.1.0"
description = "Our Little Language"
authors = ["Doug Winter <doug.winter@isotoma.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
antlr4-python3-runtime = "^4.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
